uma porrada de coisa

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1401,3 +1401,17 @@ year = {2006}
   pages =       "5--32",
   URL =         "http://dx.doi.org/10.1023/A:1010933404324",
 }
+
+@Article{journals/cj/Murtagh83,
+  title =       "A Survey of Recent Advances in Hierarchical Clustering Algorithms",
+  author =      "Fionn Murtagh",
+  journal =     "Comput. J",
+  year =        "1983",
+  number =      "4",
+  volume =      "26",
+  bibdate =     "2011-06-28",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/journals/cj/cj26.html#Murtagh83",
+  pages =       "354--359",
+  URL =         "http://dx.doi.org/10.1093/comjnl/26.4.354",
+}
