--- a/experimentos.tex
+++ b/experimentos.tex
@@ -42,6 +42,9 @@ As acurácias para cada base são apresentadas nas tabelas \ref{tab:balaccClassif0
 \ref{tab:balaccClassif1} e \ref{tab:balaccClassif2} do Apêndice \ref{detalhes}.
 % BalAcc escolhida, e não Kappa, porque brazdil usou taxas de erro.
 
+\ano{apesar de passiva, essa é a acurácia com treinamento incremental, desde
+|Y| um a um até |U| para os algs CIELM,IELM,NB e VFDT; talvez por isso o
+desempenho tenha sido pior}
 O algoritmo mais distinto é a SVM, pois apresenta os menores valores em relação a
 todos os demais (abaixo ou igual a $0,30$).
 Por outro lado, conforme esperado,
