--- a/propostas.tex
+++ b/propostas.tex
@@ -129,6 +129,9 @@ Outra vantagem é a inexistência de tempo de espera interconsultas.
 \ano{Desvantagem do cluster-based:        é pesado, mesmo que o aprendiz seja leve}
 
 \subsection{Enviesada para o balanceamento}\label{gatu}
+
+\ano{uma amostragem balanceada tem mais chance de estar sendo exploratória?}
+
 A abordagem agnóstica baseada em densidade é de natureza exploratória,
 pois enfoca as regiões mais desconhecidas (sem rótulos) do espaço de exemplos.
 Pela ausência de aprendiz, não há uma fronteira de decisão a se considerar.
