--- a/active-learning.tex
+++ b/active-learning.tex
@@ -2,8 +2,8 @@
 O \ing{aprendizado ativo}{active learning} é o estudo de máquinas
 de aprendizado capazes de se aprimorar fazendo perguntas \citep{series/synthesis/2012Settles}.
 A origem do termo remete à Pedagogia, especificamente à forma didática centrada no aluno.
-A ideia básica é aproveitar a individualidade de cada aluno e seu próprio ritmo de aprendizado,
-assim ele pode ser auxiliado pelo professor nos aspectos em que experimenta maior dificuldade.
+A ideia básica é aproveitar a individualidade de cada aluno e seu próprio ritmo de aprendizado.
+Assim, ele pode ser auxiliado pelo professor nos aspectos em que experimenta maior dificuldade.
 Esse tipo ativo de aprendizado humano - com foco no aluno - tem mostrado evidências
 de sua eficácia \citep{michael2006s}.
 Analogamente, guardadas as devidas proporções,
@@ -60,8 +60,8 @@ processo de rotulação mais econômico.
 Na literatura de aprendizado ativo há diversos sub-casos, cenários e estratégias.
 O sub-caso e o cenário de aprendizado ativo mais comuns na literatura,
 e onde se situa a presente tese, são a busca por rótulos e
-o cenário baseado em \pool, respectivamente.
-Os cenários alternativos são apresentados no Apêndice \ref{cenarios}.
+o cenário baseado em \pool, respectivamente - os
+cenários alternativos são apresentados no Apêndice \ref{cenarios}.
 No caso das estratégias,
 elas são frequentemente baseadas em diferentes concepções de relevância de
 exemplos ou mesmo diferentes teorias do aprendizado.
@@ -79,15 +79,17 @@ de amostragem ativa cujos principais representantes são apresentados nas
 seções seguintes juntamente com suas ordens de complexidade,
 % espaciais e temporais,
 suas principais características e seus princípios de funcionamento.
-
-\esb{ainda não usei a palavra aprendiz na tese,
-talvez seja desnecessário definir}
+Na apresentação das ordens de complexidade, é assumido que todos os cálculos
+possíveis de serem feitos antes do processo de amostragem já foram realizados
+e seus resultados estão disponíveis em memória.
+Essa premissa se baseia no cenário especificado na Seção \ref{cenarios}.
+Ele garante a disponibilidade de todos os exemplos antes do início da amostragem.
+Dessa forma apenas o custo computacional entre consultas se configura como potencial
+custo financeiro, por consumir o tempo do oráculo.
 
 \tar{há mais alguma adaptação para adotar algum learn ou strat}
 
 % \section{Estratégias de consulta}\label{sec:estrategias}
-
-\red{xxxxx até aqui o capítulo está feito xxxxx}
 
 
 
@@ -189,43 +191,28 @@ talvez seja desnecessário definir}
 % Uma vez definida a medida de informatividade, uma estratégia de consulta precisa ser definida; diferentes estratégias são estudadas na Seção \ref{sec:estrategias}.
 
 
-\ano{diferencia de aprendizado semisuperv. colocar algoritmos se der tempo;
-apresenta cada uma com uma figura padrão ilustrando sua particularidade}
-
-\tar{usar semisupervised somente na fase de predição não faria muito sentido.
-usar semisupervised no learner faz sentido pelo fato de se ter tantos exemplos
-unlabeled à disposição}
-
-\tar{citar relação com crowd sourcing/labeling?}
-
-\ano{definir tempo de espera interconsultas e explicitar que é assumida, qnd possível,
-a realização de cache de todos os cálculos pesados antes da primeira consulta}
 
 \green{apontar parâmetros escolhidos neste trabalho para as estratégias,
 quando houver}
 
 \subsection{Amostragem aleatória}
-
-\ano{feature: totalmente exploratório}
-
-\ano{feature: agnóstica}
-
-\ano{definição da sequência de consultas é imediata}
-
-\ano{feature: próxima consulta independe dos rótulos anteriores}
+A amostragem aleatória corresponde ao aprendizado passivo aplicado a apenas
+uma parte dos exemplos.
+Não há uma ordem de preferência ou critério para a realização das
+consultas - apenas a aleatoriedade.
+Suas principais características são: ser totalmente exploratória, ou seja,
+não enfoca nenhuma região especial do espaço de exemplos; e,
+ser agnóstica, pois não requer um aprendiz.
+Seu custo computacional pode ser considerado nulo.
 
 \subsection{Amostragem por incerteza}\label{unc}
 Provavelmente a mais simples medida de informatividade $Inf(\bm{x})$ para se
 decidir quando selecionar um exemplo $\bm{x}$
 (ou grupo de exemplos, na proposta original) é a máxima probabilidade a posteriori
 dada por um modelo probabilístico \citep{journals/sigir/Lewis95a}:
-
-\tar{definir yo Y e f}
-
 \begin{equation}
-P_{max}(\bm{x})=\max_{\bm{y}\in Y}{P(\bm{y}|\bm{x})}
+P_{max}(\bm{x})=\max_{\bm{y}\in Y}P(\bm{y}|\bm{x})
 \end{equation}
-
 Classificadores não probabilísticos e com saídas numéricas podem simular uma
 distribuição de probabilidades por meio da aplicação da função sigmoide logística
 $g=\frac{1}{1+e^{-\bm{x}}}$
@@ -234,13 +221,35 @@ $g=\frac{1}{1+e^{-\bm{x}}}$
  P(y_o=1|\bm{x}) = \frac{g(f_o(\bm{x}))}{\sum_{1 \leq p \leq |Y|}g(f_p(\bm{x})) }
 \end{equation}
 
-A estratégia de amostragem por incerteza consiste em consultar o exemplo mais informativo,
+Onde $f_o(\bm{x})$ é a função preditiva da classe $o$ para o exemplo $\bm{x}$;
+valores próximos de $1$ indicam pertinência à classe e próximos de $0$, o oposto.
+
+A estratégia de amostragem por incerteza consiste em consultar o exemplo
+mais informativo $\bm{x}^*$,
 ou seja, aquele com a menor $P_{max}(\bm{x})$,
-com o intuito de se explorar a fronteira de decisão no espaço de exemplos.
-A complexidade dessa estratégia é $\mathcal{O}(1)$ - equivalente a apenas um treinamento por consulta.
+com o intuito de se explorar a fronteira de decisão no espaço de exemplos, conforme
+Equação \ref{equnc}.
+A complexidade dessa estratégia é $\mathcal{O}(1)$ - equivalente
+a apenas um treinamento por consulta.
+\begin{equation} \label{equnc}
+ \bm{x}^*= \argmin_{\bm{x}\in\mathcal{U}}P_{max}(\bm{x})
+\end{equation}
+
 
 \subsection{Amostragem por margem ou entropia}\label{mar}
-Adequada para multiclasse.
+Adequadas para multiclasse.
+
+\begin{eqnarray} \label{eqz}
+\bm{z}=\argmax_{\bm{y}\in Y}P(\bm{y}|\bm{x})
+\\
+M(\bm{x})=P(\bm{z}|\bm{x})-\max_{\bm{y}\in Y\setminus\{\bm{z}\}}P(\bm{y}|\bm{x})
+\end{eqnarray}
+
+entropia normalizada \citep{journals/bioinformatics/LewinSA0P04}
+\begin{equation} \label{eqent}
+E(\bm{x})=-\log^{-1}|Y|\sum_{\bm{y}\in Y}P(\bm{y}|\bm{x})\log(P(\bm{y}|\bm{x}))
+\end{equation}
+
 \ano{explicar estrategias margem com fórmula M e entropia H(?)}
 
 \ano{feature: dependente de algoritmo de aprendizado}
@@ -406,7 +415,8 @@ otimista:
 \{\langle\bm{u},y\rangle\}})}
 \end{equation}
 onde $O$ é a função objetivo.
-A complexidade computacional é $\mathcal{O}(|\mathcal{U}|^2)$.
+A complexidade computacional é $\mathcal{O}(|Y||\mathcal{U}|^2)$.
+\ano{está correto colocar duas variáveis com potências diferentes em $\mathcal{O}$?}
 Após cada consulta, caso a classe real seja diferente da esperada,
 o método recorre à estratégia de amostragem por incerteza (Seção \ref{unc})
 como medida de contingência.
@@ -480,12 +490,24 @@ O processo de aprendizado pode explorar agrupamentos naturais na \pool,
 pois são independentes da existência de rótulos.
 Essa abordagem é uma alternativa à realização de consultas que enfocam a fronteira de decisão ou
 o manejo de hipóteses citados anteriormente.
-Uma importante representante desse paradigma é a \textit{amostragem hierárquica} proposta por \cite{journals/tcs/Dasgupta11}.
+Uma importante representante desse paradigma é a \textit{amostragem hierárquica}
+proposta por \cite{journals/tcs/Dasgupta11} baseada em
+agrupamento hierárquico \citep{journals/cj/Murtagh83}.
+O método de agrupamento hierárquico organiza os exemplos numa hierarquia que pode
+ser representada por uma árvore.
+Cada nó folha simboliza um exemplo e cada nó pai representa uma relação de
+proximidade/similaridade entre seus filhos.
+Os filhos, por sua vez, podem ser exemplos isolados ou novas relações.
+Qualquer nó tem o potencial de ser visto como o grupo dos exemplos representados
+pelos nós folhas mais abaixo na hierarquia.
+Na árvore como um todo, as diferentes podas possíveis definem a organização em grupos.
+\ano{figura}
 
-Os exemplos têm maior probabilidade de serem consultados se pertencerem aos grupos mais impuros e
-representativos.
-
-A implementação original do autor foi adotada neste trabalho com o mesmo algoritmo de agrupamento:
+A amostragem hierárquica faz uso da árvore para definir a relevância dos exemplos.
+Eles têm maior probabilidade de serem consultados se pertencerem aos grupos
+mais impuros e representativos.
+A implementação original do autor foi adotada neste trabalho com o mesmo
+algoritmo de agrupamento chamado
 \textit{Ward's average linkage method}\footnote{
 Implementação disponível no Weka \cite{journals/sigkdd/HallFHPRW09}.}
 \ano{como traduzir?}
@@ -704,4 +726,37 @@ e com otimizações e ainda assim é ordens de magnitude mais lento que  Unc. Sampl
 %                  * In Proceedings of the Fifth IEEE International Conference on Data Mining. November 2005.
 %                  */
 
+\subsection{Considerações}
+\ano{deixar aqui apenas as da literatura, depois repeti-las junto com as propostas numa outra tabela
+no prox capitulo}
+
+\begin{table}
+\caption{Características de cada estratégia.
+\textit{A ordem de complexidade é dada conforme a quantidade de exemplos
+a aprender para viabilizar cada consulta. \ano{é aceito O(0)?}}
+}
+\scalebox{0.88}{
+\begin{tabular}{c|c|c|c|c|c}
+\textbf{estratégia} & \textbf{\makecell{forma\\ de busca}}&\textbf{\makecell{presença \\de aprendiz}} & \textbf{\makecell{definição da \\sequência de \\consultas}} & \textbf{\makecell{dependência\\entre\\consultas}}&\textbf{\makecell{ordem de\\complexidade}}\\ \hline
+Rnd & \makecell{exploratória\\aleatória} & \makecell{agnóstica}&autônoma&nenhuma&$\mathcal{O}(0)$\\ \hline
+Clu&\makecell{balanceada:\\exploratória e\\prospectiva}& agnóstica&interativa&total&\makecell{não\\especificada}\\ \hline
+\makecell{Unc/Mar/Ent\\DW}&prospectiva&gnóstica&interativa&total&$\mathcal{O}(1)$\\ \hline % EMC
+EER&prospectiva&gnóstica&interativa&total&$\mathcal{O}(|Y||\mathcal{U}|^2)$\\ \hline
+SGmulti&\makecell{exploratória\\limitada e\\aleatória}&gnóstica&interativa&total&$\mathcal{O}(|Y|)$\\ \hline
+TU&\makecell{balanceada:\\exploratória e\\prospectiva}&gnóstica&interativa&\makecell{após etapa\\exploratória}&$\mathcal{O}(1)$\\ \hline
+ATU&\makecell{exploratória\\ponderada}&agnóstica&autônoma&nenhuma&$\mathcal{O}(0)$\\ \hline
+GATU&\makecell{em fases:\\exploratória e\\prospectiva}&\makecell{em fases:\\agnóstica e\\gnóstica}&interativa&\makecell{após etapa\\exploratória}&$\mathcal{O}(1)$\\ \hline
+GATU&\makecell{alternada:\\exploratória e\\prospectiva}&\makecell{alternada:\\agnóstica e\\gnóstica}&interativa&frequente&$\mathcal{O}(1)$\\ \hline
+\end{tabular}
+}
+\end{table}
+
+\ano{diferencia de aprendizado semisuperv. colocar algoritmos se der tempo;
+apresenta cada uma com uma figura padrão ilustrando sua particularidade}
+
+\tar{usar semisupervised somente na fase de predição não faria muito sentido.
+usar semisupervised no learner faz sentido pelo fato de se ter tantos exemplos
+unlabeled à disposição}
+
+\tar{citar relação com crowd sourcing/labeling?}
 
