--- a/contexto.tex
+++ b/contexto.tex
@@ -17,8 +17,9 @@ Essa, por sua vez, depende de um \textit{modelo} baseado nos
 dados fornecidos por um supervisor.
 A indução desse modelo é um processo de aprendizado.
 
-Aprendizado de máquina é a área que engloba algoritmos capazes de aprender
-sem programação explícita \citep{journals/cacm/Valiant84}.
+Aprendizado de máquina é a área que engloba algoritmos capazes de
+aprender - construir modelos - sem
+programação explícita \citep{journals/cacm/Valiant84}.
 Diversas tarefas como \ano{tarefa de máquina 1, tarefa2, ... REFERENCIA}
 têm sido bem sucedidas atualmente.
 Entretanto, durante a construção do modelo, é preciso saber que
@@ -37,6 +38,7 @@ na Seção \ref{aprendizado-ativo}.
 O foco deste trabalho está no problema de se lidar com a variedade
 existente de estratégias de aprendizado ativo e suas eventuais
 afinidades com diferentes domínios de aplicação e algoritmos de aprendizado.
+
 Com esse intuito,
 vários algoritmos comumente usados para classificação foram adotados.
 Adicionalmente,
@@ -55,8 +57,20 @@ Seção \ref{meta}.
 \section{Terminologia e notação}\label{notacao}
 O termo \textit{algoritmo de aprendizado} é substituído por \textit{classificador}
 quando se trata do produto do processo, isto é, o modelo capaz de classificar exemplos.
-Ele deve ser diferenciado do sistema de aprendizado como um todo -
-que poderia incluir a própria estratégia de aprendizado ativo.
+Durante a indução do modelo, se ele integrar uma estratégia de aprendizado ativo,
+ele é chamado de \textit{aprendiz}.
+Apesar de contradizer o princípio motivador do aprendizado ativo explicitado
+na Seção \ref{aprendizado-ativo},
+existem estratégias sem aprendiz chamadas \textit{agnósticas}.
+Cada \textit{consulta} da estratégia ao \textit{oráculo} visa a obtenção
+do \textit{rótulo} que contém a informação de \textit{classe} de um dado exemplo.
+As consultas podem ser \ing{exploratórias}{for exploration}, que buscam maximizar
+a variedade na escolha de exemplos; ou \ing{prospectivas}{for exploitation},
+que se concentram apenas nos casos mais críticos,
+ou seja, com maior \textit{informatividade}.
+O limite de duração para processamento computacional entre consultas
+é chamado \ing{tempo de espera tolerável}{tolerable waiting time},
+pois é o tempo efetivamente sentido pelo oráculo.
 
 \esb{O número de classes é indicado por $|Y|$ e a quantidade inicial de exemplos é
 $|\mathcal{U}|$ - mantendo a notação
@@ -70,13 +84,11 @@ $d(\bm{x},\bm{u})$ medida de distância
 $sim(\bm{x},\bm{u})$ medida de similaridade
 $\cent$ orçamento ou número de consultas
 
-\tar{explicar uso dos termos rótulo e classe; aprendiz, classificador e algoritmo de aprendizado}
+
 
 \red{explicar que vai ser adotada uma notação uniforme que compreenda AL, ELM
  e ap. inc.}
 
- \tar{explicar binômio (?) exploração-prospecção exploration-exploitation}
- 
  \input active-learning
  \input elm
  \input meta
