--- a/apendice2.tex
+++ b/apendice2.tex
@@ -16,75 +16,51 @@ exposta na Seção \ref{algs} são apresentados nas tabelas \ref{tab:balaccClassif0
 % \section{Acurácia das estratégias}
 % \esb{Rnd não vence isoladamente em nenhuma das bases com os classificadores selecionados.}
 % % só pra base 45 com ielm
-% 
+ 
 \subsection{5NN}
 \afterpage{\clearpage\begin{landscape}
-\input stratsALCKappa5NN
+\input stratsALCKappa5NNRedux
 \end{landscape}\clearpage}
-% 
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsBalAcc5NN
-% \end{landscape}\clearpage}
-% 
+% % \afterpage{\clearpage\begin{landscape}
+% % \input stratsBalAcc5NN
+% % \end{landscape}\clearpage}
+
 \subsection{C4.5}
 \afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaC4.5
+\input stratsALCKappaC4.5wRedux
 \end{landscape}\clearpage}
-% 
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsBalAccC4.5
-% \end{landscape}\clearpage}
-% 
-% \subsection{CIELM}
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsALCKappaCIELM
-% \end{landscape}\clearpage}
-% 
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsBalAccCIELM
-% \end{landscape}\clearpage}
-% 
-% \subsection{IELM}
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsALCKappaIELM
-% \end{landscape}\clearpage}
-% 
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsBalAccIELM
-% \end{landscape}\clearpage}
-% 
+% % \afterpage{\clearpage\begin{landscape}
+% % \input stratsBalAccC4.5
+% % \end{landscape}\clearpage}
+
+\subsection{CIELM}
+\afterpage{\clearpage\begin{landscape}
+\input stratsALCKappaCIELMRedux
+\end{landscape}\clearpage}
+% % \afterpage{\clearpage\begin{landscape}
+% % \input stratsBalAccCIELM
+% % \end{landscape}\clearpage}
+
+\subsection{ELM}
+\afterpage{\clearpage\begin{landscape}
+\input stratsALCKappaELMRedux
+\end{landscape}\clearpage}
+% % \afterpage{\clearpage\begin{landscape}
+% % \input stratsBalAccIELM
+% % \end{landscape}\clearpage}
+
 \subsection{NB}
 \afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaNB
+\input stratsALCKappaNBRedux
 \end{landscape}\clearpage}
-% 
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsBalAccNB
-% \end{landscape}\clearpage}
-% 
-\subsection{SVM}
-\afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaSVM
-\end{landscape}\clearpage}
-% 
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsBalAccSVM
-% \end{landscape}\clearpage}
-% 
-\subsection{VFDT}
-\afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaVFDT
-\end{landscape}\clearpage}
-% 
-% \afterpage{\clearpage\begin{landscape}
-% \input stratsBalAccVFDT
-% \end{landscape}\clearpage}
-%
+% % \afterpage{\clearpage\begin{landscape}
+% % \input stratsBalAccNB
+% % \end{landscape}\clearpage}
+
 \subsection{RF}
 \afterpage{\clearpage\begin{landscape}
-\input stratsALCKappaRF %Redux
+\input stratsALCKappaRFwRedux
 \end{landscape}\clearpage}
-
 % \afterpage{\clearpage\begin{landscape}
 % \input stratsBalAccRF
 % \end{landscape}\clearpage}
