--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -1415,3 +1415,18 @@ year = {2006}
   pages =       "354--359",
   URL =         "http://dx.doi.org/10.1093/comjnl/26.4.354",
 }
+
+@InProceedings{conf/ijcai/RendellST87,
+  title =       "Layered Concept-Learning and Dynamically Variable Bias Management",
+  author =      "Larry A. Rendell and Raj Sheshu and David K. Tcheng",
+  bibdate =     "2012-05-15",
+  bibsource =   "DBLP,
+                 http://dblp.uni-trier.de/db/conf/ijcai/ijcai87.html#RendellST87",
+  booktitle =   "IJCAI",
+  booktitle =   "Proceedings of the 10th International Joint Conference
+                 on Artificial Intelligence. Milan, Italy, August 1987",
+  publisher =   "Morgan Kaufmann",
+  year =        "1987",
+  editor =      "John P. McDermott",
+  pages =       "308--314",
+}
