--- a/contexto.tex
+++ b/contexto.tex
@@ -12,10 +12,10 @@ Trata-se de habilidades aprendidas por humanos em que é difícil
 identificar os algoritmos nos quais se baseiam.
 A identificação da categoria de determinado objeto de interesse
 é parte importante das potencialidades
-de agentes inteligentes e é chamada de \textbf{classificação}.
+de agentes inteligentes e é chamada de \textit{classificação}.
 Essa, por sua vez, depende de um \textit{modelo} baseado nos
 dados fornecidos por um supervisor.
-A indução desse modelo é um processo de aprendizado.
+A indução desse modelo é um processo de \textit{aprendizado}.
 
 Aprendizado de máquina é a área que engloba algoritmos capazes de
 aprender - construir modelos - sem
