--- a/exp-analise.tex
+++ b/exp-analise.tex
@@ -138,17 +138,17 @@ As tabelas \ref{stratsALCKappaFriedCIELMRedux},
 contêm o resultado da comparação de todas as estratégias entre si para
 os algoritmos CIELM, 5NN, C4.5, NB, VFDT e SVM respectivamente \ano{RF?}.
 
-\input stratsALCKappaFriedCIELMRedux
-
-\input stratsALCKappaFried5NNRedux
-
-\input stratsALCKappaFriedC4.5Redux
-
-\input stratsALCKappaFriedNBRedux
-
-\input stratsALCKappaFriedVFDTRedux
-
-\input stratsALCKappaFriedSVMRedux
+% \input stratsALCKappaFriedCIELMRedux
+% 
+% \input stratsALCKappaFried5NNRedux
+% 
+% \input stratsALCKappaFriedC4.5Redux
+% 
+% \input stratsALCKappaFriedNBRedux
+% 
+% \input stratsALCKappaFriedVFDTRedux
+% 
+% \input stratsALCKappaFriedSVMRedux
 
 \input stratsALCKappaFriedRFRedux
 
