--- a/experimentos.tex
+++ b/experimentos.tex
@@ -74,6 +74,8 @@ por ser inferior à CIELM (Apêndice \ref{detalhes})
 e ambas possuírem uma proximidade excessiva com relação a princípio de funcionamento
 e desempenho.
 
+\ano{mudar para medir distancia apenas das passivas}
+
 \input classifsFried
 
 
