--- a/rankplot.tex
+++ b/rankplot.tex
@@ -30,7 +30,12 @@ scale only axis, width=300, y dir=reverse, yticklabel style={/pgf/number format/
 % \addplot+[solid, blue, mark=triangle*, mark repeat=200, mark phase=156] table[x=budget, y=TUeuc] {kappamediaallReduxRank.plot};\addlegendentry{TUeuc}
 % \addplot+[solid, red, thick, mark=triangle*, mark options={solid, scale=1.5}, mark repeat=200, mark phase=168] table[x=budget, y=LUeuc] {kappamediaallReduxRank.plot};\addlegendentry{LUeuc}
 
-\addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=DWeuc] {kappamediaallReduxRank.plot};\addlegendentry{DWeuc}
+% \addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=GATU0man] {kappamediaallReduxRank.plot};\addlegendentry{GATU0man}
+% \addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=GATUman] {kappamediaallReduxRank.plot};\addlegendentry{GATUman}
+\addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=GATU0mah] {kappamediaallReduxRank.plot};\addlegendentry{GATU0mah}
+\addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=GATUmah] {kappamediaallReduxRank.plot};\addlegendentry{GATUmah}
+
+% \addplot+[solid, dark green, mark=diamond, mark options={solid, scale=1}, mark repeat=200, mark phase=120] table[x=budget, y=DWeuc] {kappamediaallReduxRank.plot};\addlegendentry{DWeuc}
 
 \end{axis}
 \end{tikzpicture}
