--- a/active-learning.tex
+++ b/active-learning.tex
@@ -85,7 +85,7 @@ e seus resultados estão disponíveis em memória.
 Essa premissa se baseia no cenário especificado na Seção \ref{cenarios}.
 Ele garante a disponibilidade de todos os exemplos antes do início da amostragem.
 Dessa forma apenas o custo computacional entre consultas se configura como potencial
-custo financeiro, por consumir o tempo do oráculo.
+custo financeiro porque consome o tempo do oráculo.
 
 \tar{há mais alguma adaptação para adotar algum learn ou strat}
 
@@ -206,8 +206,10 @@ ser agnóstica, pois não requer um aprendiz.
 Seu custo computacional pode ser considerado nulo.
 
 \subsection{Amostragem por incerteza}\label{unc}
-Provavelmente a mais simples medida de informatividade $Inf(\bm{x})$ para se
-decidir quando selecionar um exemplo $\bm{x}$
+% least confident
+Provavelmente a mais simples medida de informatividade
+% $Inf(\bm{x})$
+para se decidir quando selecionar um exemplo $\bm{x}$
 (ou grupo de exemplos, na proposta original) é a máxima probabilidade a posteriori
 dada por um modelo probabilístico \citep{journals/sigir/Lewis95a}:
 \begin{equation}
@@ -237,26 +239,23 @@ a apenas um treinamento por consulta.
 
 
 \subsection{Amostragem por margem ou entropia}\label{mar}
-Adequadas para multiclasse.
-
+Em problemas multiclasse, o menor $P_{max}(\bm{x})$ pode não indicar o exemplo
+mais controverso, pois pode existir um exemplo com duas ou mais classes igualmente prováveis,
+porém com maior $P_{max}(\bm{x})$.
+A medida da margem, apresentada nas Equações \ref{eqz} e \ref{eqmar},
+evita esse problema utilizando o valor da diferença entre as duas maiores probabilidades.
+Outra possibilidade é a medida de entropia normalizada
+\citep{journals/bioinformatics/LewinSA0P04}, apresentada na \ref{eqent}.
 \begin{eqnarray} \label{eqz}
 \bm{z}=\argmax_{\bm{y}\in Y}P(\bm{y}|\bm{x})
 \\
 M(\bm{x})=P(\bm{z}|\bm{x})-\max_{\bm{y}\in Y\setminus\{\bm{z}\}}P(\bm{y}|\bm{x})
+\label{eqmar}
 \end{eqnarray}
-
-entropia normalizada \citep{journals/bioinformatics/LewinSA0P04}
 \begin{equation} \label{eqent}
 E(\bm{x})=-\log^{-1}|Y|\sum_{\bm{y}\in Y}P(\bm{y}|\bm{x})\log(P(\bm{y}|\bm{x}))
 \end{equation}
 
-\ano{explicar estrategias margem com fórmula M e entropia H(?)}
-
-\ano{feature: dependente de algoritmo de aprendizado}
-
-\ano{definição da sequência de consultas é gradual}
-
-\ano{feature: próxima consulta depende dos rótulos anteriores}
 
 \subsection{Busca no espaço de hipóteses}\label{sgnet}
 É possível fazer uma amostragem ativa baseada na perspectiva do espaço de hipóteses.
@@ -425,6 +424,7 @@ a amostragem por margem (Seção \ref{mar}) foi utilizada nos experimentos deste t
  
 Neste trabalho, seguindo a escolha do artigo original,
 optou-se pela entropia como função objetivo.
+\ano{verificar se ficaram mesmo as duas; balacc é melhor que kappa porque não zera tão fácil?}
 Adicionalmente, a acurácia balanceada (Seção \ref{metricas})
 foi adotada como uma variação do método,
 visando agir diretamente nas medidas multiclasse de interesse apresentadas na
