--- a/passiveDists.tex
+++ b/passiveDists.tex
@@ -1,13 +1,16 @@
 \begin{table}[h]
 \caption{Similaridade entre algoritmos de aprendizado de acordo com a acurácia balanceada para as 94 bases de dados. O maior e o menor valor de cada linha está em \textcolor{blue}{\textbf{azul}} e \textcolor{red}{\textbf{vermelho}} respectivamente. Valores iguais ou acima de $0,50$ estão em negrito.}
-\begin{center}\begin{tabular}{lcc|cc|cc|cc}
- 				& 5NN & C4.5 & CIELM & IELM & NB & RF & VFDT & SVM \\5NN	& - & \textbf{  0.52} &   0.38 &   0.40 &   0.46 & \textcolor{blue}{\textbf{  0.53}} &   0.44 & \textcolor{red}{\textbf{  0.28}} \\
-C4.5	& \textbf{  0.52} & - &   0.38 &   0.40 &   0.46 & \textcolor{blue}{\textbf{  0.59}} &   0.43 & \textcolor{red}{\textbf{  0.28}} \\ \hline
-CIELM	&   0.38 &   0.38 & - & \textcolor{blue}{\textbf{  0.77}} &   0.43 &   0.34 &   0.42 & \textcolor{red}{\textbf{  0.29}} \\
-IELM	&   0.40 &   0.40 & \textcolor{blue}{\textbf{  0.77}} & - &   0.44 &   0.35 &   0.43 & \textcolor{red}{\textbf{  0.30}} \\ \hline
-NB	&   0.46 &   0.46 &   0.43 &   0.44 & - &   0.42 & \textcolor{blue}{\textbf{  0.56}} & \textcolor{red}{\textbf{  0.28}} \\
-RF	& \textbf{  0.53} & \textcolor{blue}{\textbf{  0.59}} &   0.34 &   0.35 &   0.42 & - &   0.40 & \textcolor{red}{\textbf{  0.26}} \\ \hline
-VFDT	&   0.44 &   0.43 &   0.42 &   0.43 & \textcolor{blue}{\textbf{  0.56}} &   0.40 & - & \textcolor{red}{\textbf{  0.28}} \\
-SVM	&   0.28 &   0.28 &   0.29 & \textcolor{blue}{\textbf{  0.30}} &   0.28 & \textcolor{red}{\textbf{  0.26}} &   0.28 & - \\ \hline\end{tabular}\label{passiveDists}
+\begin{center}\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|cc|c}
+ 				& \begin{sideways}5NN\end{sideways} & \begin{sideways}C4.5\end{sideways} & \begin{sideways}CIELM\end{sideways} & \begin{sideways}CIELMBatch\end{sideways} & \begin{sideways}IELM\end{sideways} & \begin{sideways}IELMBatch\end{sideways} & \begin{sideways}NB\end{sideways} & \begin{sideways}NBBatch\end{sideways} & \begin{sideways}RF\end{sideways} & \begin{sideways}VFDT\end{sideways} & \begin{sideways}SVM\end{sideways} \\5NN	& - & \textbf{  0.52} &   0.38 & \textcolor{blue}{\textbf{  0.53}} &   0.40 & \textbf{  0.51} &   0.46 &   0.46 & \textcolor{blue}{\textbf{  0.53}} &   0.44 & \textcolor{red}{\textbf{  0.28}} \\
+C4.5	& \textbf{  0.52} & - &   0.38 & \textbf{  0.50} &   0.40 &   0.49 &   0.46 & \textbf{  0.54} & \textcolor{blue}{\textbf{  0.59}} &   0.43 & \textcolor{red}{\textbf{  0.28}} \\ \hline
+CIELM	&   0.38 &   0.38 & - &   0.49 & \textcolor{blue}{\textbf{  0.77}} & \textbf{  0.50} &   0.43 &   0.40 &   0.34 &   0.42 & \textcolor{red}{\textbf{  0.29}} \\
+CIELMBatch	& \textbf{  0.53} & \textbf{  0.50} &   0.49 & - & \textbf{  0.52} & \textcolor{blue}{\textbf{  0.85}} &   0.47 &   0.47 &   0.46 &   0.46 & \textcolor{red}{\textbf{  0.29}} \\ \hline
+IELM	&   0.40 &   0.40 & \textcolor{blue}{\textbf{  0.77}} & \textbf{  0.52} & - & \textbf{  0.54} &   0.44 &   0.41 &   0.35 &   0.43 & \textcolor{red}{\textbf{  0.30}} \\
+IELMBatch	& \textbf{  0.51} &   0.49 & \textbf{  0.50} & \textcolor{blue}{\textbf{  0.85}} & \textbf{  0.54} & - &   0.46 &   0.46 &   0.44 &   0.45 & \textcolor{red}{\textbf{  0.29}} \\ \hline
+NB	&   0.46 &   0.46 &   0.43 &   0.47 &   0.44 &   0.46 & - & \textbf{  0.55} &   0.42 & \textcolor{blue}{\textbf{  0.56}} & \textcolor{red}{\textbf{  0.28}} \\
+NBBatch	&   0.46 & \textbf{  0.54} &   0.40 &   0.47 &   0.41 &   0.46 & \textcolor{blue}{\textbf{  0.55}} & - &   0.47 &   0.47 & \textcolor{red}{\textbf{  0.27}} \\ \hline
+RF	& \textbf{  0.53} & \textcolor{blue}{\textbf{  0.59}} &   0.34 &   0.46 &   0.35 &   0.44 &   0.42 &   0.47 & - &   0.40 & \textcolor{red}{\textbf{  0.26}} \\
+VFDT	&   0.44 &   0.43 &   0.42 &   0.46 &   0.43 &   0.45 & \textcolor{blue}{\textbf{  0.56}} &   0.47 &   0.40 & - & \textcolor{red}{\textbf{  0.28}} \\ \hline
+SVM	&   0.28 &   0.28 &   0.29 &   0.29 & \textcolor{blue}{\textbf{  0.30}} &   0.29 &   0.28 &   0.27 & \textcolor{red}{\textbf{  0.26}} &   0.28 & - \\\end{tabular}}\label{passiveDists}
 \end{center}
 \end{table}
