--- a/stratsALCKappaFriedRFwRedux.tex
+++ b/stratsALCKappaFriedRFwRedux.tex
@@ -1,5 +1,5 @@
 \begin{table}[h]
-\caption{Um contra um (RF). Medida: ALCKappa. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
+\caption{Um contra um (RFw). Medida: ALCKappa. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
 \begin{center}\begin{tabular}{lcc|cc|cc|cc|cc}
  			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10\\
 1 - Rnd  	& - &   &   &   &   &   &   &   &   &   \\
@@ -12,6 +12,6 @@
 8 - \textbf{ATUman}	& * & * &   &   &   &   &   & - &   &   \\ \hline
 9 - TUmah	& * & * &   & * & * & * &   & * & - & * \\
 10 - \textbf{ATUmah}	& * & . &   &   &   &   &   &   &   & - \\ \hline\end{tabular}
-\label{stratsALCKappaFriedRFRedux}
+\label{stratsALCKappaFriedRFwRedux}
 \end{center}
 \end{table}
