--- a/stratsALCKappaFriedSVMRedux.tex
+++ b/stratsALCKappaFriedSVMRedux.tex
@@ -1,22 +1,21 @@
 \begin{table}[h]
 \caption{Um contra um (SVM). Medida: ALCKappa. \textit{Legenda na Tabela \ref{tab:friedClassif}.}}
-\begin{center}\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|cc|c}
- 			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14 & 15\\
-1 - Rnd  	& - &   &   &   &   &   &   &   &   &   &   &   &   &   &   \\
-2 - Clu  	&   & - &   &   &   &   &   &   &   &   &   &   &   &   &   \\ \hline
-3 - Mar  	&   &   & - &   &   &   &   &   & + &   &   &   &   &   &   \\
-4 - EERent	& * & * &   & - &   & * & + &   & * &   &   &   &   & + &   \\ \hline
-5 - EERacu	&   &   &   &   & - &   &   &   & * &   &   &   &   &   &   \\
-6 - \textbf{SGmulti}	&   &   &   &   &   & - &   &   &   &   &   &   &   &   &   \\ \hline
-7 - DWeuc	&   &   &   &   &   &   & - &   &   &   &   &   &   &   &   \\
-8 - TUman	&   &   &   &   &   &   &   & - &   &   &   &   &   &   &   \\ \hline
-9 - \textbf{ATUman}	&   &   &   &   &   &   &   &   & - &   &   &   &   &   &   \\
-10 - TUmah	& * & * & * & * & * & * & * & * & * & - &   & * &   & * &   \\ \hline
-11 - \textbf{ATUmah}	& * & * & * & * & * & * & * & * & * &   & - & * &   & * &   \\
-12 - \textbf{GATU0man}	&   &   &   &   &   &   &   &   & + &   &   & - &   &   &   \\ \hline
-13 - \textbf{GATU0mah}	& * & * & * & * & * & * & * & * & * &   &   & * & - & * &   \\
-14 - \textbf{GATUman}	&   &   &   &   &   &   &   &   &   &   &   &   &   & - &   \\ \hline
-15 - \textbf{GATUmah}	& * & * & * & * & * & * & * & * & * &   &   & * &   & * & - \\\end{tabular}}
+\begin{center}\scalebox{0.9}{\begin{tabular}{lcc|cc|cc|cc|cc|cc|cc}
+ 			& 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 & 13 & 14\\
+1 - Rnd  	& - &   &   &   &   &   &   &   &   &   &   &   &   &   \\
+2 - Clu  	&   & - &   &   &   &   &   &   &   &   &   &   &   &   \\ \hline
+3 - Mar  	&   &   & - &   &   &   &   & + &   &   &   &   &   &   \\
+4 - EERent	& * & * &   & - &   & * &   & * &   &   &   &   & + &   \\ \hline
+5 - EERacu	&   &   &   &   & - &   &   & * &   &   &   &   &   &   \\
+6 - \textbf{SGmulti}	&   &   &   &   &   & - &   &   &   &   &   &   &   &   \\ \hline
+7 - TUman	&   &   &   &   &   &   & - &   &   &   &   &   &   &   \\
+8 - \textbf{ATUman}	&   &   &   &   &   &   &   & - &   &   &   &   &   &   \\ \hline
+9 - TUmah	& * & * & * & * & * & * & * & * & - &   & * &   & * &   \\
+10 - \textbf{ATUmah}	& * & * & * & * & * & * & * & * &   & - & * &   & * &   \\ \hline
+11 - \textbf{GATU0man}	&   &   &   &   &   &   &   & + &   &   & - &   &   &   \\
+12 - \textbf{GATU0mah}	& * & * & * & * & * & * & * & * &   &   & * & - & * &   \\ \hline
+13 - \textbf{GATUman}	&   &   &   &   &   &   &   &   &   &   &   &   & - &   \\
+14 - \textbf{GATUmah}	& * & * & * & * & * & * & * & * &   &   & * &   & * & - \\ \hline\end{tabular}}
 \label{stratsALCKappaFriedSVMRedux}
 \end{center}
 \end{table}
