--- a/stratsALCKappaRFwRedux.tex
+++ b/stratsALCKappaRFwRedux.tex
@@ -1,6 +1,6 @@
 \definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para RF: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para RFw: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 1-abalone 3class &   0.36/  0.03 &   0.37/\textcolor{black}{\textbf{  0.02}} & \textcolor{red}{\textbf{  0.34}}/  0.09 &   0.36/  0.04 &   0.36/  0.04 &   0.37/  0.03 & \textcolor{blue}{\textbf{  0.38}}/\textcolor{black}{\textbf{  0.02}} & \textcolor{blue}{\textbf{  0.38}}/  0.03 & \textcolor{blue}{\textbf{  0.38}}/  0.03 &   0.37/  0.03 \\
 2-arcene &   0.49/  0.09 &   0.49/  0.08 &   0.51/  0.09 &   0.52/\textcolor{black}{\textbf{  0.07}} &   0.51/  0.08 & \underline{\textcolor{blue}{\textbf{  0.55}}}/\textcolor{black}{\textbf{  0.07}} & \textcolor{black}{\textbf{  0.54}}/\textcolor{black}{\textbf{  0.07}} &   0.50/  0.09 &   0.49/  0.08 & \textcolor{red}{\textbf{  0.48}}/  0.09 \\
@@ -33,11 +33,11 @@
 29-ionosphere & \textcolor{red}{\textbf{  0.76}}/\textcolor{black}{\textbf{  0.06}} &   0.77/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.81}}/  0.07 &   0.79/\textcolor{black}{\textbf{  0.06}} &   0.78/  0.08 &   0.79/\textcolor{black}{\textbf{  0.06}} & \textcolor{blue}{\textbf{  0.81}}/  0.07 &   0.77/  0.07 &   0.80/\textcolor{black}{\textbf{  0.06}} &   0.79/\textcolor{black}{\textbf{  0.06}} \\
 30-iris & \textcolor{red}{\textbf{  0.88}}/  0.04 & \textcolor{red}{\textbf{  0.88}}/  0.04 &   0.89/  0.04 &   0.89/  0.04 & \textcolor{red}{\textbf{  0.88}}/  0.04 & \textcolor{blue}{\textbf{  0.90}}/  0.04 & \textcolor{blue}{\textbf{  0.90}}/  0.04 & \textcolor{blue}{\textbf{  0.90}}/  0.04 & \textcolor{blue}{\textbf{  0.90}}/  0.04 &   0.89/  0.04 \\
 31-kr vs kp & \textcolor{red}{\textbf{  0.72}}/  0.03 & \textcolor{red}{\textbf{  0.72}}/  0.04 & \textcolor{black}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.02}} &   0.77/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} &   0.78/\textcolor{black}{\textbf{  0.02}} & \textcolor{black}{\textbf{  0.81}}/\textcolor{black}{\textbf{  0.02}} &   0.77/\textcolor{black}{\textbf{  0.02}} & \underline{\textcolor{blue}{\textbf{  0.82}}}/\textcolor{black}{\textbf{  0.02}} &   0.76/\textcolor{black}{\textbf{  0.02}} \\
-32-leaf & \textcolor{red}{\textbf{  0.59}}/  0.04 & \textcolor{red}{\textbf{  0.59}}/  0.04 &   0.62/\textcolor{black}{\textbf{  0.03}} &   0.62/\textcolor{black}{\textbf{  0.03}} &   0.60/  0.04 &   0.61/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.64}}}/\textcolor{black}{\textbf{  0.03}} &   0.62/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.63}}/  0.04 & \textcolor{black}{\textbf{  0.63}}/  0.04 \\\end{tabular}}\label{stratsALCKappa0aRFRedux}
+32-leaf & \textcolor{red}{\textbf{  0.59}}/  0.04 & \textcolor{red}{\textbf{  0.59}}/  0.04 &   0.62/\textcolor{black}{\textbf{  0.03}} &   0.62/\textcolor{black}{\textbf{  0.03}} &   0.60/  0.04 &   0.61/\textcolor{black}{\textbf{  0.03}} & \underline{\textcolor{blue}{\textbf{  0.64}}}/\textcolor{black}{\textbf{  0.03}} &   0.62/\textcolor{black}{\textbf{  0.03}} & \textcolor{black}{\textbf{  0.63}}/  0.04 & \textcolor{black}{\textbf{  0.63}}/  0.04 \\\end{tabular}}\label{stratsALCKappa0aRFwRedux}
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para RF: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para RFw: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 33-leukemia haslinger & \textcolor{red}{\textbf{  0.64}}/  0.14 & \textcolor{red}{\textbf{  0.64}}/\textcolor{black}{\textbf{  0.13}} & \textcolor{blue}{\textbf{  0.66}}/\textcolor{darkgreen}{\textbf{  0.12}} &   0.65/\textcolor{black}{\textbf{  0.13}} & \textcolor{red}{\textbf{  0.64}}/  0.15 &   0.65/  0.14 & \textcolor{blue}{\textbf{  0.66}}/\textcolor{black}{\textbf{  0.13}} & \textcolor{red}{\textbf{  0.64}}/  0.14 & \textcolor{blue}{\textbf{  0.66}}/\textcolor{black}{\textbf{  0.13}} & \textcolor{red}{\textbf{  0.64}}/  0.14 \\
 34-mammographic mass & \textcolor{red}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.04}} &   0.58/  0.06 & \textcolor{black}{\textbf{  0.61}}/  0.06 &   0.60/  0.06 &   0.59/  0.05 &   0.59/\textcolor{black}{\textbf{  0.04}} & \textcolor{black}{\textbf{  0.61}}/  0.06 &   0.59/  0.06 & \underline{\textcolor{blue}{\textbf{  0.62}}}/  0.05 & \textcolor{red}{\textbf{  0.57}}/  0.05 \\
@@ -70,11 +70,11 @@
 61-spect heart &   0.30/\textcolor{black}{\textbf{  0.08}} &   0.30/  0.09 & \textcolor{blue}{\textbf{  0.32}}/  0.09 &   0.31/\textcolor{black}{\textbf{  0.08}} & \textcolor{blue}{\textbf{  0.32}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{blue}{\textbf{  0.32}}/\textcolor{black}{\textbf{  0.08}} &   0.31/\textcolor{black}{\textbf{  0.08}} & \textcolor{red}{\textbf{  0.29}}/  0.10 & \textcolor{blue}{\textbf{  0.32}}/  0.09 &   0.30/  0.09 \\
 62-spectf heart & \textcolor{red}{\textbf{  0.18}}/\textcolor{black}{\textbf{  0.09}} &   0.19/  0.10 &   0.19/\textcolor{black}{\textbf{  0.09}} & \textcolor{black}{\textbf{  0.21}}/\textcolor{black}{\textbf{  0.09}} &   0.20/  0.10 &   0.19/  0.10 &   0.19/\textcolor{black}{\textbf{  0.09}} & \underline{\textcolor{blue}{\textbf{  0.23}}}/  0.12 &   0.19/\textcolor{darkgreen}{\textbf{  0.08}} & \textcolor{black}{\textbf{  0.21}}/  0.11 \\
 63-statlog australian... & \textcolor{red}{\textbf{  0.66}}/  0.05 &   0.67/  0.06 & \textcolor{blue}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.04}} &   0.68/\textcolor{black}{\textbf{  0.04}} &   0.67/  0.05 &   0.68/  0.05 & \textcolor{blue}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.04}} & \textcolor{blue}{\textbf{  0.69}}/\textcolor{black}{\textbf{  0.04}} &   0.68/  0.05 &   0.67/  0.05 \\
-64-statlog german cre... & \textcolor{red}{\textbf{  0.21}}/  0.07 &   0.23/  0.09 & \underline{\textcolor{blue}{\textbf{  0.26}}}/  0.06 & \textcolor{red}{\textbf{  0.21}}/  0.06 &   0.23/  0.06 &   0.24/  0.06 &   0.24/  0.08 &   0.24/\textcolor{black}{\textbf{  0.05}} &   0.22/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.25}}/  0.06 \\\end{tabular}}\label{stratsALCKappa1aRFRedux}
+64-statlog german cre... & \textcolor{red}{\textbf{  0.21}}/  0.07 &   0.23/  0.09 & \underline{\textcolor{blue}{\textbf{  0.26}}}/  0.06 & \textcolor{red}{\textbf{  0.21}}/  0.06 &   0.23/  0.06 &   0.24/  0.06 &   0.24/  0.08 &   0.24/\textcolor{black}{\textbf{  0.05}} &   0.22/\textcolor{black}{\textbf{  0.05}} & \textcolor{black}{\textbf{  0.25}}/  0.06 \\\end{tabular}}\label{stratsALCKappa1aRFwRedux}
 \end{center}
 \end{table}\definecolor{darkgreen}{rgb}{0.0, 0.4, 0.0}
 \begin{table}[h]
-\caption{ALCKappa para RF: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
+\caption{ALCKappa para RFw: Os maiores valores da média e desvio padrão de cada base está em \textcolor{blue}{\textbf{negrito azul}} e \textcolor{red}{\textbf{negrito vermelho}} respectivamente. Valores isolados estão sublinhados. Os menores valores de desvio padrão estão em \textcolor{darkgreen}{verde}. Apenas negrito indica segundo melhor valor.}
 \begin{center}\scalebox{0.7}{\begin{tabular}{lc|c|c|c|c|c|c|c|c|c}
  & Rnd & Clu & Mar & EERent & EERacu & \textbf{SGmulti} & TUman & \textbf{ATUman} & TUmah & \textbf{ATUmah}\\ \hline 65-statlog heart &   0.59/  0.08 & \textcolor{red}{\textbf{  0.57}}/\textcolor{black}{\textbf{  0.07}} &   0.59/\textcolor{black}{\textbf{  0.07}} &   0.59/\textcolor{black}{\textbf{  0.07}} &   0.58/  0.09 & \textcolor{blue}{\textbf{  0.60}}/  0.08 & \textcolor{blue}{\textbf{  0.60}}/  0.09 &   0.59/  0.09 & \textcolor{blue}{\textbf{  0.60}}/  0.08 &   0.58/  0.08 \\
 66-statlog image segm... & \textcolor{red}{\textbf{  0.84}}/  0.02 &   0.86/  0.02 &   0.89/  0.02 &   0.88/\textcolor{black}{\textbf{  0.01}} &   0.87/\textcolor{black}{\textbf{  0.01}} &   0.89/\textcolor{black}{\textbf{  0.01}} & \underline{\textcolor{blue}{\textbf{  0.91}}}/\textcolor{black}{\textbf{  0.01}} &   0.88/\textcolor{black}{\textbf{  0.01}} & \textcolor{black}{\textbf{  0.90}}/\textcolor{black}{\textbf{  0.01}} &   0.86/\textcolor{black}{\textbf{  0.01}} \\
@@ -105,6 +105,6 @@
 91-wilt &   0.33/  0.14 &   0.34/  0.11 & \underline{\textcolor{blue}{\textbf{  0.68}}}/\textcolor{darkgreen}{\textbf{  0.07}} &   0.59/  0.12 &   0.48/  0.13 &   0.48/  0.09 & \textcolor{black}{\textbf{  0.67}}/\textcolor{black}{\textbf{  0.08}} & \textcolor{red}{\textbf{  0.29}}/  0.11 &   0.62/  0.09 &   0.36/  0.11 \\
 92-wine & \textcolor{red}{\textbf{  0.91}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{red}{\textbf{  0.91}}/  0.04 & \textcolor{blue}{\textbf{  0.94}}/\textcolor{black}{\textbf{  0.03}} &   0.93/\textcolor{black}{\textbf{  0.03}} &   0.92/\textcolor{darkgreen}{\textbf{  0.02}} &   0.93/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.94}}/\textcolor{black}{\textbf{  0.03}} &   0.93/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.94}}/\textcolor{black}{\textbf{  0.03}} &   0.92/\textcolor{black}{\textbf{  0.03}} \\ \hline
 93-wine quality white... &   0.16/  0.03 &   0.16/  0.03 &   0.16/  0.03 &   0.16/  0.03 & \textcolor{red}{\textbf{  0.15}}/  0.03 &   0.16/  0.03 & \textcolor{blue}{\textbf{  0.17}}/  0.03 & \textcolor{blue}{\textbf{  0.17}}/  0.03 & \textcolor{blue}{\textbf{  0.17}}/  0.03 & \textcolor{blue}{\textbf{  0.17}}/  0.03 \\
-94-yeast 4class & \textcolor{red}{\textbf{  0.37}}/\textcolor{black}{\textbf{  0.03}} &   0.38/  0.04 & \textcolor{blue}{\textbf{  0.39}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.39}}/\textcolor{black}{\textbf{  0.03}} &   0.38/  0.04 &   0.38/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.39}}/\textcolor{black}{\textbf{  0.03}} &   0.38/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.39}}/  0.04 &   0.38/\textcolor{black}{\textbf{  0.03}} \\\end{tabular}}\label{stratsALCKappa2aRFRedux}
+94-yeast 4class & \textcolor{red}{\textbf{  0.37}}/\textcolor{black}{\textbf{  0.03}} &   0.38/  0.04 & \textcolor{blue}{\textbf{  0.39}}/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.39}}/\textcolor{black}{\textbf{  0.03}} &   0.38/  0.04 &   0.38/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.39}}/\textcolor{black}{\textbf{  0.03}} &   0.38/\textcolor{black}{\textbf{  0.03}} & \textcolor{blue}{\textbf{  0.39}}/  0.04 &   0.38/\textcolor{black}{\textbf{  0.03}} \\\end{tabular}}\label{stratsALCKappa2aRFwRedux}
 \end{center}
 \end{table}
